Add `.dsc.adaptedresource.json` manifest type

--- a/lib/dsc-lib/locales/en-us.toml
+++ b/lib/dsc-lib/locales/en-us.toml
@@ -104,6 +104,7 @@ adapterFound = "Resource adapter '%{adapter}' version %{version} found"
 resourceFound = "Resource '%{resource}' version %{version} found"
 executableNotFound = "Executable '%{executable}' not found for operation '%{operation}' for resource '%{resource}'"
 extensionInvalidVersion = "Extension '%{extension}' version '%{version}' is invalid"
+invalidAdaptedResourceManifest = "Invalid manifest for adapted resource '%{resource}'"
 invalidResourceManifest = "Invalid manifest for resource '%{resource}'"
 invalidExtensionManifest = "Invalid manifest for extension '%{extension}'"
 invalidManifestList = "Invalid manifest list '%{resource}': %{err}"
@@ -206,6 +207,7 @@ validationFailed = "Failed validation"
 adapterResourceNotFound = "Adapter resource '%{adapter}' not found"
 adapterManifestNotFound = "Adapter manifest for '%{adapter}' not found"
 adapterDoesNotSupportDelete = "Adapter '%{adapter}' does not support delete operation"
+validatingAgainstSchema = "Validating against resource schema"
 
 [dscresources.resource_manifest]
 resourceManifestSchemaTitle = "Resource manifest schema URI"
